day-03/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: p1.brainupgrade.in
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"    
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - p1.brainupgrade.in
    secretName: p1.brainupgrade.in
  rules:
  - host: p1.brainupgrade.in
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
